providerSeeds connected with Mongodb done

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start-dev": "nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "seed": "node ./bin/providerSeeds"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
