--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "express": "~4.16.0",
     "express-session": "^1.16.1",
     "hbs": "~4.0.1",
